# scrubs

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: lib.rs  main.rs
